Replaced 'Stream.collect(Collectors.toList())' with 'Stream.toList()'
Signed-off-by: dilansalinda <dilansalinda@gmil.com>